Bug 13870, patch 9456 - Changed medicore error dialog to set error description width instead of dialog height and width and changed the overflow to visible. r=mook
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@12508 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/skin/feathers.css
+++ b/feathers/gonzo/chrome/skin/feathers.css
@@ -50,6 +50,7 @@ TABLE OF CONTENTS
 > DEVICE SUMMARY PAGE
 > FIRST RUN WIZARD
 > TRACK EDITOR
+> MEDIACORE ERROR DIALOG
 > SMART PLAYLIST EDITOR
 > ABOUT DIALOG
 > FIND BAR
@@ -833,6 +834,17 @@ toolbarbutton[disabled="true"] > .toolbarbutton-menulist-dropmarker {
 }
 
 
+
+/******************************************************************************
+> MEDIACORE ERROR DIALOG
+******************************************************************************/
+#mediacore_error > sb-sys-outer-frame > .dialog-content-box {
+  overflow: visible;
+}
+
+#mediacore_error_desc_box {
+  width: 440px;
+}
 
 /******************************************************************************
 > SMART PLAYLIST EDITOR
